--- a/style.css
+++ b/style.css
@@ -9,9 +9,9 @@
   --text-color: white;
   --card-border: rgba(255, 255, 255, 0.1);
   --card-border-hover: rgba(255, 255, 255, 0.5);
-  --card-bg: rgba(174, 165, 253, 0.1);
-  --card-bg-hover: rgba(109, 8, 104, 0.5);
-  --card-bg-active: rgba(109, 8, 104, 0.7);
+  --card-bg: rgba(65, 2, 73, 0.5);
+  --card-bg-hover: rgba(117, 4, 112, 0.5);
+  --card-bg-active: rgba(168, 3, 160, 0.7);
   
   --btn-bg: #247a6c;
   --btn-bg-disabled: rgba(10, 63, 41, 0.2);
@@ -73,8 +73,8 @@ body {
   z-index: -1;
   --f: var(--blob-glow);
   animation:
-    blobs-1e28bd3d 150s linear infinite,
-    thingy 5s linear infinite;
+    blobs-1e28bd3d 450s linear infinite,
+    thingy 40s linear infinite;
   background-color: var(--blob-core);
   background-image: radial-gradient(ellipse 66px 50px at 50% 50%, var(--blob-color) 0%, transparent 100%),
                     radial-gradient(ellipse 77px 60px at 50% 50%, var(--blob-color) 0%, transparent 100%),
@@ -183,6 +183,7 @@ p {
   box-sizing: border-box;
   text-align: center;
   text-align-last: center;
+margin-bottom: 30px;
 }
 
 .grid-themen {
