--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
 
 body {
   font-family: "Segoe UI", sans-serif;
-  background: linear-gradient(to right, #e0f2fe, #f0f9ff);
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -130,7 +130,7 @@ body {
   }
 }
 .container {
-  background: white;
+  background:rgba(red, green, blue, alpha);
   padding: 2rem;
   border-radius: 1rem;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
@@ -141,6 +141,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  backdrop-filter: blur(10px); 
 }
 
 h1 {
