--- a/style.css
+++ b/style.css
@@ -285,10 +285,10 @@ p {
   font-weight: 500;
 }
 .abbruch-btn {
-  background-color: #ff4d4d;
+  background-color: none;
   color: var(--text-color);
-  border: none;
-  border-radius: 0.5rem;
+  border: 2x solid var(--text-color);
+  border-radius: 15px;
   padding: 0.5rem 1rem;
   cursor: pointer;
   font-size: 0.9rem;
@@ -296,12 +296,33 @@ p {
 }
 
 .abbruch-btn:hover {
-  background-color: #ff3333;
+  background-color: none;
+  border: 3px solid var(--text-color);
+  font-weight: bold;
 }
 
 .button-group {
-  display: flex;
-  gap: 1rem;
-  justify-content: center;
-  margin-top: 1rem;
+  background-color: none;
+  color: var(--text-color);
+  border: 2x solid var(--text-color);
+  border-radius: 15px;
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  font-size: 0.9rem;
+  transition: background-color 0.3s;
+}
+.button-group .abbruch-btn {
+  background-color: none;
+  border: 3px solid var(--text-color);
+  font-weight: bold;
+}
+.ergebnis-titel {
+  color: var(--text-color);
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+.ergebnis-text {
+  color: var(--text-color);
+  font-size: 1.25em;
+  margin-bottom: 2rem;
 }
