--- a/style.css
+++ b/style.css
@@ -321,13 +321,16 @@ p {
   border: 3px solid var(--text-color);
   font-weight: bold;
 }
+
 .ergebnis-titel {
   color: var(--text-color);
   font-size: 1.5rem;
   margin-bottom: 1rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 .ergebnis-text {
   color: var(--text-color);
   font-size: 1.25em;
   margin-bottom: 2rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
